grid layout for main. fix button alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 /*<------------------body------------->*/
 body{
     display:grid;
-    grid-template-rows: repeat(4, 0.5fr);
+    grid-template-rows: 0.5fr 0.5fr 400px 0.5fr;
     grid-template-columns: 200px 1fr;
     background-color: #F3E9DE;
    }
@@ -24,6 +24,9 @@ nav{
 
 nav h2{
     color: #256993;
+    display: inline-block;
+    margin: 10px;
+    font-size: medium;
 }
 
 
@@ -76,6 +79,18 @@ main{
     background-color: #F3E9DE;
 }
 
+.main_container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr 0.5fr;
+}
+
+/*<------------------textarea------------->*/
+
+textarea{
+    grid-column: 1/4;
+    grid-row: 2/3;
+}
 
 
 /*<------------------footer------------->*/
@@ -92,14 +107,49 @@ footer h2{
 }
 
 
-
-
-
 /*<------------------buttons------------->*/
 
 .new_note{
     border-radius: 12px;
     background-color: #256993;
     color: white;
-    width: 50%;
+    width: 20%;
+    height: 40%;
+    position: relative;
+}
+
+.dark_theme{
+    border-radius: 12px;
+    background-color: #56536A;
+    color: white;
+    width: 20%;
+    height: 40%;
+    grid-column: 3/4;
+    grid-row: 1;
+}
+
+.save{
+    border-radius: 12px;
+    background-color: #256993;
+    color: white;
+    width: 16%;
+    height: 20%;
+    grid-column: 3/4;
+    grid-row: 3;
+}
+
+.cancel{
+    border-radius: 12px;
+    background-color: #9B332C;
+    color: white;
+    width: 22%;
+    height: 20%;
+    grid-column: 3/4;
+    grid-row: 3;
+}
+
+/*<------------------textarea------------->*/
+
+textarea{
+    border: 2px solid #256993;
 }
